.infra/ingress/pay-home.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pay-home
spec:
  replicas: 3
  selector:
    matchLabels:
      name: marvel
  template:
    metadata:
      labels:
        name: marvel
    spec:
      containers:
        - image: smlinux/pay
          name: pay-home
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pay-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    name: pay-home
