.infra/ingress/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rule
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marvel-service
            port:
              number: 80
      - path: /pay
        pathType: Prefix
        backend:
          service:
            name: pay-service
            port:
              number: 80
